# network_operator

./: .gitmodules  CMakeLists.txt  README.md
app/: run_to_goal.cpp  simple_app.cpp
data/: default_matrix  default_q.txt
lib/: baseFunctions.cpp  controller.cpp  model.cpp  nop.cpp  reader.cpp  runner.cpp
lib/include/: controller.hpp  model.hpp  nop.hpp  reader.h  runner.hpp
test/: CMakeLists.txt  nop_test.cpp  nop_test_utils.cpp  reader_test.cpp  runner_test.cpp
test/include/: nop_test_utils.h
utils/: plotState.py
